# FluxionDSL

./: .gitignore  .replit  README.md  demo.flx  minitest.txt  pyproject.toml  replit.md  security_demo.flx
.github/workflows/: ci.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
examples/: basic_recon_oast.flx  interp_demo.flx  oast_recon.flx  redirect_chain_oast.flx  ssrf_allowlist_bypass.flx  ssrf_batch_extended.flx  ssrf_cloud_metadata_combo.flx  ssrf_endpoint_fuzzer.flx  ssrf_http_probe.flx  ssrf_interactsh_combo.flx  ssrf_interactsh_single.flx  ssrf_interactsh_spray.flx  ssrf_internal_port_matrix.flx  ssrf_method_timing_scan.flx  ssrf_payload_factory.flx  ssrf_redirect_chain.flx  ssrf_redirect_chain_check.flx
fluxion/: cli.py  stdlib.py
fluxion/core/: parser.py
fluxion/grammar/: fluxion.lark
fluxion/runtime/: runner_v2.py
tests/: test_eval.py  test_parse.py  test_runner_smoke.py
