[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxion"
version = "2.2.0"
description = "Fluxion DSL (minimal) — parser + runtime"
authors = [{name="You"}]
requires-python = ">=3.10"
dependencies = [
  "lark>=1.1.7",
  "requests>=2.31.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "pytest>=8.4.2",
]

[project.scripts]
fluxion = "fluxion.cli:main"
